# ServiceWindows

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Executable/Installer/: SetupWS.msi  WS_setup.msi
src/: App.cpp  App.hpp  MsiObject.cpp  MsiObject.hpp
